--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/laravel/echo"
+    "url": "https://github.com/simonhamp/echo"
   },
   "keywords": [
     "laravel",
