--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "laravel-echo",
+  "name": "laravel-echo-ratchet",
   "version": "1.4.0",
-  "description": "Laravel Echo library for beautiful Pusher and Socket.IO integration",
+  "description": "Laravel Echo library for beautiful Pusher, Socket.IO and now Ratchet integration",
   "main": "dist/echo.js",
   "scripts": {
     "compile": "./node_modules/.bin/rollup -c",
